--- a/src/Components/VideoProduction copy.scss
+++ b/src/Components/VideoProduction copy.scss
@@ -14,7 +14,6 @@
   align-items: center;
   width: 100%;
   margin: auto;
-
   // max-width: 1600px;
   // height: 100%;
   // min-height: 100vh; /* ビューポートの高さを最小値に設定 */
@@ -36,83 +35,48 @@
   flex-direction: column;
   position: absolute;
   top: 0;
-  // width: 1600px;
+  width: 1600px;
   margin: 10px auto;
   flex-wrap: wrap;
   z-index: 10;
-
   .videoproduct-title {
-    display: flex;
-    justify-content: space-between;
     background-color: $base-color2;
     color: white;
-    border-radius: 3px;
-    padding: 8px 15px 4px 25px;
-    font-size: 24px;
-    @include box-shadow2;
-    @media (max-width: 800px) {
-      font-size: 22px;
-      padding: 5px 15px 2px 25px;
-    }
+    font-size: 34px;
+    padding: 10px 30px 10px 40px;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* テキストに影をつけて視認性を向上 */
+    z-index: 2;
+  }
+
+  .videoproduct-title-char {
+    display: inline-block;
+    color: rgba(255, 250, 250, 0.92);
+    text-shadow: rgb(99, 98, 98) 5px 5px;
+    font-weight: 700;
+    opacity: 0;
+    transform: translateX(-100%);
+    animation: slide-in-left 2s ease-out forwards;
+    animation-delay: calc(0.3s * var(--char-index));
+    letter-spacing: 1px;
     @media (max-width: 576px) {
-      width: 90%;
-      font-size: 16px;
-      margin: 0 auto;
-      padding: 5px 15px 5px 15px;
-    }
-    .videoproduct-title-text {
-      font-weight: bold;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* テキストに影をつけて視認性を向上 */
-      z-index: 2;
-      @media (max-width: 800px) {
-        font-size: 24px;
-        padding: 5px 15px 2px 25px;
-      }
-      @media (max-width: 576px) {
-        width: 90%;
-        font-size: 16px;
-        margin: 0 auto;
-        padding: 5px 10px 2px 15px;
-      }
-    }
-
-    .videoproduct-title-char {
-      display: inline-block;
-      color: rgba(255, 250, 250, 0.92);
       text-shadow: rgb(99, 98, 98) 5px 5px;
-      font-weight: 700;
+      font-size: 6vw;
+    }
+  }
+
+  @keyframes slide-in-left {
+    0% {
       opacity: 0;
-      transform: translateX(-100%);
-      animation: slide-in-left 2s ease-out forwards;
-      animation-delay: calc(0.1s * var(--char-index));
-      letter-spacing: 1px;
-      @media (max-width: 576px) {
-        text-shadow: rgb(99, 98, 98) 5px 5px;
-      }
+      transform: translateX(0%) skewX(-7deg);
     }
 
-    @keyframes slide-in-left {
-      0% {
-        opacity: 0;
-        transform: translateX(0%) skewX(-7deg);
-      }
-
-      100% {
-        opacity: 1;
-        transform: translateX(0) skewX(-7deg);
-      }
+    100% {
+      opacity: 1;
+      transform: translateX(0) skewX(-7deg);
     }
   }
 
-  .videoproduct-post {
-    @include submit-button;
-    margin-bottom: 6px;
-  }
-
-  .videoproduct-post-text {
-    display: block;
-    transform: skewX(-7deg);
-  }
   .videoproduct-box-wrap {
     display: flex;
     flex-wrap: wrap;
@@ -121,14 +85,13 @@
   }
 
   .videoproduct-box {
-    border: 2px $base-color2 solid;
-    background-color: $light-base-color2;
+    // border: 5px red solid;
+    background-color: white;
     width: 400px;
     height: 400px;
     margin: 20px;
     overflow: hidden;
-    border-radius: 3px;
-    @include box-shadow2;
+    border-radius: 10px;
   }
 
   .videoproduct-box.dummy {
