--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 //_variables.scss
 $base-color: #007bff;
 $base-color2: #2a4da3;
-$base-color3: #267c2d;
+$base-color3: #102867;
 $base-color4: #296369;
 $navbar-color: #1c9164;
 $navbar-color2: #055c3a;
