--- a/src/Components/CommonIntroduction.scss
+++ b/src/Components/CommonIntroduction.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-.vbacreate-container {
+.commonintroduction-container {
   position: relative;
   display: flex;
   justify-content: center;
@@ -20,7 +20,7 @@
   // min-height: 100vh; /* ビューポートの高さを最小値に設定 */
 }
 
-.vbacreate-container-background-video {
+.commonintroduction-container-background-video {
   position: fixed; /* スクロールしても固定 */
   top: 50%; /* 画面の中央を基準に */
   left: 50%;
@@ -31,7 +31,7 @@
   z-index: -1;
 }
 
-.vbacreate-content {
+.commonintroduction-content {
   background-color: lighten($navbar-color2, 77%);
   display: flex;
   flex-direction: column;
@@ -43,7 +43,7 @@
   z-index: 10;
   padding-top: 10px;
 
-  .vbacreate-title {
+  .commonintroduction-title {
     display: flex;
     justify-content: space-between;
     background-color: $base-color2;
@@ -71,7 +71,7 @@
       margin: 0 auto;
       padding: 5px 5px 5px 15px;
     }
-    .vbacreate-title-text {
+    .commonintroduction-title-text {
       font-weight: bold;
       text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* テキストに影をつけて視認性を向上 */
       z-index: 2;
@@ -87,7 +87,7 @@
       }
     }
 
-    .vbacreate-title-char {
+    .commonintroduction-title-char {
       display: inline-block;
       color: rgba(255, 250, 250, 0.92);
       text-shadow: rgb(99, 98, 98) 5px 5px;
@@ -115,24 +115,24 @@
     }
   }
 
-  .vbacreate-post {
+  .commonintroduction-post {
     @include submit-button;
     border: 1px white solid;
     margin-bottom: 6px;
   }
 
-  .vbacreate-post-text {
+  .commonintroduction-post-text {
     display: block;
     transform: skewX(-7deg);
   }
-  .vbacreate-box-wrap {
+  .commonintroduction-box-wrap {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: auto;
   }
 
-  .vbacreate-box {
+  .commonintroduction-box {
     border: 2px $base-color2 solid;
     background-color: lighten($base-color2, 40%);
     width: 400px;
@@ -148,7 +148,7 @@
       margin: 8px 0 2px;
     }
 
-    .vbacreate-box-edit-button {
+    .commonintroduction-box-edit-button {
       background-color: transparent;
       border: none;
       color: white;
@@ -161,11 +161,11 @@
     }
   }
 
-  .vbacreate-box.dummy {
+  .commonintroduction-box.dummy {
     visibility: hidden;
   }
 
-  .vbacreate-box-title {
+  .commonintroduction-box-title {
     display: flex;
     justify-content: space-between;
     margin: 10px 15px;
@@ -182,7 +182,7 @@
       margin: 5px 10px;
       padding: 3px 0 2px 8px;
     }
-    .vbacreate-box-title-text {
+    .commonintroduction-box-title-text {
       display: block;
       transform: skewX(-7deg);
       line-height: 1.3;
@@ -190,7 +190,7 @@
     }
   }
 
-  .vbacreate-box-content {
+  .commonintroduction-box-content {
     align-items: flex-start;
     flex-wrap: wrap;
     margin: 15px 15px 10px;
@@ -206,14 +206,26 @@
     }
   }
 
-  .vbacreate-box-image {
+  .commonintroduction-box-youtube {
+    margin: 0 15px;
+    background: rgba(0, 0, 0, 0.3); /* 半透明の黒背景 */
+    backdrop-filter: blur(10px); /* 背景ぼかし */
+    height: 220px;
+    text-align: center;
+    @media (max-width: 576px) {
+      height: 210px;
+      margin: 6px 10px;
+    }
+  }
+
+  .commonintroduction-box-image {
     width: 160px; /* 画像のサイズを調整 */
     height: auto; /* アスペクト比を維持 */
     margin-right: 15px; /* 画像とテキストの間に余白を作る */
     float: left;
   }
 
-  .vbacreate-box-content-text {
+  .commonintroduction-box-content-text {
     padding: 10px;
   }
 }
@@ -234,7 +246,7 @@
   }
 }
 
-.vbacreate-box-button-case {
+.commonintroduction-box-button-case {
   display: flex;
   justify-content: flex-end;
   margin: 0 18px 15px;
@@ -246,11 +258,11 @@
     margin: 0 18px 7px;
   }
 }
-.vbacreate-box-button {
+.commonintroduction-box-button {
   @include submit-button;
   width: 140px;
 }
-.vbacreate-box-button-text {
+.commonintroduction-box-button-text {
   display: inline-block;
   transform: skewX(-7deg);
   font-size: 16px;
