--- a/src/Components/FirestoreService.scss
+++ b/src/Components/FirestoreService.scss
@@ -40,6 +40,7 @@
       @media (max-width: 800px) {
       }
       @media (max-width: 576px) {
+        padding: 5px 0 0 5px;
       }
     }
   }
@@ -77,7 +78,7 @@
     display: flex;
     flex-direction: column;
     margin: 0;
-    padding: 5px 0 0 0;
+    padding: 5px 0 15px 0;
     border-radius: 3px;
     @include box-shadow;
     @media (max-width: 800px) {
@@ -95,7 +96,7 @@
       }
       @media (max-width: 576px) {
         margin: 3px 10px 3px;
-        font-size: 16px;
+        font-size: 15px;
       }
     }
     .firestoreservice-field-comment {
@@ -105,7 +106,8 @@
       transform: skewX(-7deg);
     }
     .firestoreservice-field-inner,
-    .firestoreservice-field-inner2 {
+    .firestoreservice-field-inner2,
+    .firestoreservice-field-inner3 {
       background-color: white;
       display: flex;
       justify-content: center;
@@ -210,11 +212,21 @@
         }
       }
     }
+    .firestoreservice-field-inner3 {
+      display: flex;
+      justify-content: start;
+      .firestoreservice-field-inner-preimage {
+        margin: 10px;
+      }
+      p {
+        margin-top: 20px;
+      }
+    }
 
     .firestoreservice-submit-button {
       background-color: $navbar-color2;
       font-size: 20px;
-      margin: 20px auto;
+      margin: 15px auto 0;
       color: #fff;
       width: 50%;
       padding: 6px 10px 2px;
@@ -235,7 +247,7 @@
         width: 40%;
         font-size: 12px;
         padding: 4px 6px 3px;
-        margin: 15px auto;
+        margin: 12px auto 0;
       }
     }
   }
