--- a/src/Components/VideoProduction.scss
+++ b/src/Components/VideoProduction.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-.commonintroduction-container {
+.videoproduct-container {
   position: relative;
   display: flex;
   justify-content: center;
@@ -20,7 +20,7 @@
   // min-height: 100vh; /* ビューポートの高さを最小値に設定 */
 }
 
-.commonintroduction-container-background-video {
+.videoproduct-container-background-video {
   position: fixed; /* スクロールしても固定 */
   top: 50%; /* 画面の中央を基準に */
   left: 50%;
@@ -31,7 +31,7 @@
   z-index: -1;
 }
 
-.commonintroduction-content {
+.videoproduct-content {
   background-color: lighten($navbar-color2, 77%);
   display: flex;
   flex-direction: column;
@@ -43,7 +43,7 @@
   z-index: 10;
   padding-top: 10px;
 
-  .commonintroduction-title {
+  .videoproduct-title {
     display: flex;
     justify-content: space-between;
     background-color: $base-color2;
@@ -71,7 +71,7 @@
       margin: 0 auto;
       padding: 5px 5px 5px 15px;
     }
-    .commonintroduction-title-text {
+    .videoproduct-title-text {
       font-weight: bold;
       text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* テキストに影をつけて視認性を向上 */
       z-index: 2;
@@ -87,7 +87,7 @@
       }
     }
 
-    .commonintroduction-title-char {
+    .videoproduct-title-char {
       display: inline-block;
       color: rgba(255, 250, 250, 0.92);
       text-shadow: rgb(99, 98, 98) 5px 5px;
@@ -115,24 +115,24 @@
     }
   }
 
-  .commonintroduction-post {
+  .videoproduct-post {
     @include submit-button;
     border: 1px white solid;
     margin-bottom: 6px;
   }
 
-  .commonintroduction-post-text {
+  .videoproduct-post-text {
     display: block;
     transform: skewX(-7deg);
   }
-  .commonintroduction-box-wrap {
+  .videoproduct-box-wrap {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: auto;
   }
 
-  .commonintroduction-box {
+  .videoproduct-box {
     border: 2px $base-color2 solid;
     background-color: lighten($base-color2, 40%);
     width: 400px;
@@ -148,12 +148,11 @@
       margin: 8px 0 2px;
     }
 
-    .commonintroduction-box-edit-button {
+    .videoproduct-box-edit-button {
       background-color: transparent;
       border: none;
       color: white;
       font-size: 22px;
-      z-index: 100;
       @media (max-width: 576px) {
         font-size: 14px;
         font-weight: 600;
@@ -161,17 +160,17 @@
     }
   }
 
-  .commonintroduction-box.dummy {
+  .videoproduct-box.dummy {
     visibility: hidden;
   }
 
-  .commonintroduction-box-title {
+  .videoproduct-box-title {
     display: flex;
     justify-content: space-between;
     margin: 10px 15px;
     background-color: $base-color2;
     color: white;
-    padding: 3px 1px 2px 13px;
+    padding: 5px 1px 2px 13px;
     font-size: 20px;
     object-fit: cover;
     z-index: 100;
@@ -182,7 +181,7 @@
       margin: 5px 10px;
       padding: 3px 0 2px 8px;
     }
-    .commonintroduction-box-title-text {
+    .videoproduct-box-title-text {
       display: block;
       transform: skewX(-7deg);
       line-height: 1.3;
@@ -190,23 +189,8 @@
     }
   }
 
-  .commonintroduction-box-content {
-    align-items: flex-start;
-    flex-wrap: wrap;
-    margin: 15px 15px 10px;
-    padding: 10px;
-    background-color: white;
-    // &:hover {
-    //   color: $navbar-color;
-    //   transform: translateX(3px) translateY(3px);
-    // }
-    @media (max-width: 576px) {
-      margin: 10px 10px 10px;
-      padding: 10px 10px 5px 10px;
-    }
-  }
-
-  .commonintroduction-box-youtube {
+  /* 画像の上に配置するオーバーレイ */
+  .videoproduct-box-youtube {
     margin: 0 15px;
     background: rgba(0, 0, 0, 0.3); /* 半透明の黒背景 */
     backdrop-filter: blur(10px); /* 背景ぼかし */
@@ -218,15 +202,27 @@
     }
   }
 
-  .commonintroduction-box-image {
-    width: 160px; /* 画像のサイズを調整 */
-    height: auto; /* アスペクト比を維持 */
-    margin-right: 15px; /* 画像とテキストの間に余白を作る */
-    float: left;
-  }
+  .videoproduct-box-content {
+    background-color: rgb(254, 254, 254);
+    margin: 10px 15px;
+    padding: 5px;
+    font-size: 18px;
+    line-height: 1.3;
+    font-weight: 400;
+    // color: darken($base-color2, 7%);
 
-  .commonintroduction-box-content-text {
-    padding: 10px;
+    @media (max-width: 576px) {
+      font-size: 14px;
+      // height: 165px;
+      line-height: 1.3;
+      margin: 6px 10px;
+    }
+
+    .videoproduct-box-content-text {
+      // display: block;
+
+      // transform: skewX(-3deg);
+    }
   }
 }
 
@@ -244,26 +240,4 @@
     opacity: 1;
     transform: translateX(0);
   }
-}
-
-.commonintroduction-box-button-case {
-  display: flex;
-  justify-content: flex-end;
-  margin: 0 18px 15px;
-  &:hover {
-    color: $navbar-color;
-    transform: translateX(3px) translateY(3px);
-  }
-  @media (max-width: 576px) {
-    margin: 0 18px 7px;
-  }
-}
-.commonintroduction-box-button {
-  @include submit-button;
-  width: 140px;
-}
-.commonintroduction-box-button-text {
-  display: inline-block;
-  transform: skewX(-7deg);
-  font-size: 16px;
 }
