--- a/src/Components/WebDesignIncludeBackend.scss
+++ b/src/Components/WebDesignIncludeBackend.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-.commonintroduction-container {
+.webdesignIncludebackend-container {
   position: relative;
   display: flex;
   justify-content: center;
@@ -20,7 +20,7 @@
   // min-height: 100vh; /* ビューポートの高さを最小値に設定 */
 }
 
-.commonintroduction-container-background-video {
+.webdesignIncludebackend-container-background-video {
   position: fixed; /* スクロールしても固定 */
   top: 50%; /* 画面の中央を基準に */
   left: 50%;
@@ -31,7 +31,7 @@
   z-index: -1;
 }
 
-.commonintroduction-content {
+.webdesignIncludebackend-content {
   background-color: lighten($navbar-color2, 77%);
   display: flex;
   flex-direction: column;
@@ -43,7 +43,7 @@
   z-index: 10;
   padding-top: 10px;
 
-  .commonintroduction-title {
+  .webdesignIncludebackend-title {
     display: flex;
     justify-content: space-between;
     background-color: $base-color2;
@@ -71,7 +71,7 @@
       margin: 0 auto;
       padding: 5px 5px 5px 15px;
     }
-    .commonintroduction-title-text {
+    .webdesignIncludebackend-title-text {
       font-weight: bold;
       text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* テキストに影をつけて視認性を向上 */
       z-index: 2;
@@ -87,7 +87,7 @@
       }
     }
 
-    .commonintroduction-title-char {
+    .webdesignIncludebackend-title-char {
       display: inline-block;
       color: rgba(255, 250, 250, 0.92);
       text-shadow: rgb(99, 98, 98) 5px 5px;
@@ -115,24 +115,24 @@
     }
   }
 
-  .commonintroduction-post {
+  .webdesignIncludebackend-post {
     @include submit-button;
     border: 1px white solid;
     margin-bottom: 6px;
   }
 
-  .commonintroduction-post-text {
+  .webdesignIncludebackend-post-text {
     display: block;
     transform: skewX(-7deg);
   }
-  .commonintroduction-box-wrap {
+  .webdesignIncludebackend-box-wrap {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: auto;
   }
 
-  .commonintroduction-box {
+  .webdesignIncludebackend-box {
     border: 2px $base-color2 solid;
     background-color: lighten($base-color2, 40%);
     width: 400px;
@@ -148,7 +148,7 @@
       margin: 8px 0 2px;
     }
 
-    .commonintroduction-box-edit-button {
+    .webdesignIncludebackend-box-edit-button {
       background-color: transparent;
       border: none;
       color: white;
@@ -161,11 +161,11 @@
     }
   }
 
-  .commonintroduction-box.dummy {
+  .webdesignIncludebackend-box.dummy {
     visibility: hidden;
   }
 
-  .commonintroduction-box-title {
+  .webdesignIncludebackend-box-title {
     display: flex;
     justify-content: space-between;
     margin: 10px 15px;
@@ -182,7 +182,7 @@
       margin: 5px 10px;
       padding: 3px 0 2px 8px;
     }
-    .commonintroduction-box-title-text {
+    .webdesignIncludebackend-box-title-text {
       display: block;
       transform: skewX(-7deg);
       line-height: 1.3;
@@ -190,42 +190,30 @@
     }
   }
 
-  .commonintroduction-box-content {
+  .webdesignIncludebackend-box-content {
     align-items: flex-start;
     flex-wrap: wrap;
     margin: 15px 15px 10px;
     padding: 10px;
     background-color: white;
-    // &:hover {
-    //   color: $navbar-color;
-    //   transform: translateX(3px) translateY(3px);
-    // }
+    &:hover {
+      color: $navbar-color;
+      transform: translateX(3px) translateY(3px);
+    }
     @media (max-width: 576px) {
       margin: 10px 10px 10px;
       padding: 10px 10px 5px 10px;
     }
   }
 
-  .commonintroduction-box-youtube {
-    margin: 0 15px;
-    background: rgba(0, 0, 0, 0.3); /* 半透明の黒背景 */
-    backdrop-filter: blur(10px); /* 背景ぼかし */
-    height: 220px;
-    text-align: center;
-    @media (max-width: 576px) {
-      height: 210px;
-      margin: 6px 10px;
-    }
-  }
-
-  .commonintroduction-box-image {
+  .webdesignIncludebackend-box-image {
     width: 160px; /* 画像のサイズを調整 */
     height: auto; /* アスペクト比を維持 */
     margin-right: 15px; /* 画像とテキストの間に余白を作る */
     float: left;
   }
 
-  .commonintroduction-box-content-text {
+  .webdesignIncludebackend-box-content-text {
     padding: 10px;
   }
 }
@@ -246,7 +234,7 @@
   }
 }
 
-.commonintroduction-box-button-case {
+.webdesignIncludebackend-box-button-case {
   display: flex;
   justify-content: flex-end;
   margin: 0 18px 15px;
@@ -258,11 +246,11 @@
     margin: 0 18px 7px;
   }
 }
-.commonintroduction-box-button {
+.webdesignIncludebackend-box-button {
   @include submit-button;
   width: 140px;
 }
-.commonintroduction-box-button-text {
+.webdesignIncludebackend-box-button-text {
   display: inline-block;
   transform: skewX(-7deg);
   font-size: 16px;
